--- a/ser-mobile-app.html
+++ b/ser-mobile-app.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>ITech</title>
+    <title>Mobile App Development - Itech</title>
 </head>
 
 <body id="body">
@@ -116,13 +116,13 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- top fold  -->
-    <section style="background-image: linear-gradient(rgba(1, 119, 190, 0.8), rgb(35 82 112)); height: 330px;">
+    <section style="background-image:linear-gradient(rgb(1 190 142 / 92%), rgb(38 94 80 / 92%)), url(assets/images/m-app.jpg); height: 400px; background-position:center; background-size:cover;">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-12 d-flex flex-column justify-content-end pb-5" data-aos="fade" data-aos-duration="2000">
-                    <p class="text-white" style="font-size:13px;"> <span>Home</span> <i style="font-size:15px;" class="bi bi-arrow-right-square"></i> <span>Our Aprroach</span>
+                    <p class="text-white" style="font-size:13px;"> <span>Home</span> <i style="font-size:15px;" class="bi bi-arrow-right-square"></i> <span>Mobile App Development</span>
                     </p>
-                    <h1 class="text-white">Our Approach</h1>
+                    <h1 class="text-white">Mobile App Development</h1>
                 </div>
             </div>
         </div>
@@ -130,109 +130,8 @@
     <!-- top fold -end -->
     <!-- section 2 -->
     <section style="padding-top:70px; padding-bottom:70px;">
-        <div class="container ">
-            <h2 style="font-size:25px" class="mt-4" data-aos="fade-up" data-aos-duration="2500">Our Mission</h2>
-            <p style="font-size:15px;" class="mt-3" data-aos="fade-up" data-aos-duration="2500"><i style="color:grey;" class="fas fa-quote-left me-3"></i>We strive to be the trusted and preferred provider of technology solutions that enable businesses and organizations to succeed.<i style="color:grey;" class="fas fa-quote-right ms-3"></i></p>
-            <div class="approach" data-aos="fade-up" data-aos-duration="2500">
-                <h2 style="font-size:25px" class="mt-5" data-aos="fade" data-aos-duration="2500">Our Values</h2>
-                <div class="row mt-4">
-                    <div class="col-3">
-                        <div class="p-4 text-center d-flex flex-column justify-content-center align-items-center" style="background-color:#068f97;
-                            height:100%; border-radius: 15px;">
-                            <img class="mb-2" src="assets/images/v1.png" width="30%" alt="">
-                            <h3>COLLABORATION</h3>
-                            <p class="m-0">iTechnologies believes in enduring partnerships and active collaboration amongst team members and with Customers.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="p-4 text-center d-flex flex-column justify-content-center align-items-center" style="background-color:#1b7e1e;
-                            height:100%; border-radius: 15px;">
-                            <img class="mb-2" src="assets/images/v2.png" width="30%" alt="">
-                            <h3>COMMITEMENT</h3>
-                            <p class="m-0">iTechnologies is committed to delivering workable solutions that meet Customer requirements.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="p-4 text-center d-flex flex-column justify-content-center align-items-center" style="background-color:#a31428;
-                            height:100%; border-radius: 15px;">
-                            <img class="mb-2" src="assets/images/v3.png" width="30%" alt="">
-                            <h3>INTEGRITY</h3>
-                            <p class="m-0">iTechnologies believes that integrity is the cornerstone of building customer relationships.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="p-4 text-center d-flex flex-column justify-content-center align-items-center" style="background-color:#b77514;
-                            height:100%; border-radius: 15px;">
-                            <img class="mb-2" src="assets/images/v4.png" width="30%" alt="">
-                            <h3>INNOVATION</h3>
-                            <p class="m-0">iTechnologies uses its experience and skills to continuously innovate the way we approach problems and provide solutions and guidance to our customers.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h2 style="font-size:25px" class="mt-5" data-aos="fade-up" data-aos-duration="2500">Our Approach</h2>
-            <div data-aos="fade-up" data-aos-duration="2500">
-                <p style="font-size:15px;" class="mt-3"><i class="fas fa-angle-double-right me-2"></i>Data and Technology has become a critical enabler to thrive in the 21st century, in which organizations need to constantly evolve and adapt to the changing environment and market needs. They need to be able to have agility in capturing opportunities, introducing new products, innovating business models and optimizing business processes. Thus, application development and deployment is a critical part of business operations.</p>
-                <p style="font-size:15px;" class="mt-3"><i class="fas fa-angle-double-right me-2"></i>We use the Agile Development Methodology for software development and implementation which is based on iterative development. The full software development life cycle involving all phases of the project are iterated in sprints, to include quality and control checkpoints and allow coordination of project activities throughout the implementation. This enhances productivity and release of software versions catering to the changing needs</p>
-                <p style="font-size:15px;" class="mt-3"><i class="fas fa-angle-double-right me-2"></i>DevOps Methodology brings together the development and operations teams together in the development and maintenance of software. Multidisciplinary teams collaborating helps to maximize automation, improve business processes and overall creates efficiency across all tasks involved in delivering the software.
-                    When DevOps and Agile are used together, the capabilities of these two methodologies lead to much greater efficiency and more reliable results.</p>
-                <p style="font-size:15px;" class="mt-3"><i class="fas fa-angle-double-right me-2"></i>At iTechnologies, we have integrated DevOps methodology within the Agile framework to address the agility requirements of our Customers across all technology stacks and create new ways to collaborate and deliver software and solutions. The result is strengthened customer focus, innovation, productivity, and quicker software delivery while catering to the changing needs of the Customer.</p>
-            </div>
-            <div class="py-4" data-aos="fade-up" data-aos-duration="2500">
-                <iframe src="https://onedrive.live.com/embed?cid=AE8633F45A026927&amp;resid=AE8633F45A026927%21264&amp;authkey=AJL7PQ6viY1l0L0&amp;em=2&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-12 pe-4">
-                    <h2 style="font-size:25px" class="mt-5" data-aos="fade-up" data-aos-duration="2500">Our Clients</h2>
-                    <p style="font-size:15px;" class="mt-3" data-aos="fade-up" data-aos-duration="2500">We have a diverse customer base ranging from government agencies, leading public corporations, NGOs, constitutional institutions, private sector and also international organizations. Many have become repeat customers over the years. Some of our notable Customers are:
-                        Royal Monetary Authority (RMA), Royal Securities Exchange of Bhutan (RSEBL), Royal Civil Service Commission (RCSC), Royal Court of Justice, Druk Holding and Investments (DHI), Bank Of Bhutan (BoB), Karma Trading House, Bio Bhutan, Royal Education Council (REC), Royal Civil Service Commission(RCSC), Department of Information Technology and Telecom (DITT), 4 Major Municipalities: Thimphu Thromde, Phuntsholing Thromde, Gelephu Thromde, Samdrub Jongkhar Thromde, Road Safety and Transport Authority (RSTA), Bhutan Olympic Committee, Anti-Corruption Commission of Bhutan, Department of Youth and Sports, National Library and Archives of Bhutan, Google Inc., International Finance Corporation (IFC), World Bank through Ministry of Works and Human Settlement, SAARC Development Fund Secretariat, Department of National Properties, etc.
-                    </p>
-                </div>
-                <div class="col-lg-11 d-flex align-items-center p-3" data-aos="fade-up" data-aos-duration="2500">
-                    <div class="owl-carousel owl-theme owl-approach">
-                        <div class="item text-center p-2 d-flex- justify-content-center align-items-center flex-column">
-                            <img class="w-100" src="assets/images/partner/log0.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log1.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log2.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-75" src="assets/images/partner/log3.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-100" src="assets/images/partner/log4.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log5.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log6.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log7.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-100" src="assets/images/partner/log8.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-75" src="assets/images/partner/log9.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-75" src="assets/images/partner/log10.jpg" alt="company-logo">
-                        </div>
-                        <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
-                            <img class="w-50" src="assets/images/partner/log11.jpg" alt="company-logo">
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="container">
+            <p class="w-75">We provide professional mobile consulting and business analysis to analyze your needs and client requirements, define and prioritize features, as well as plan out the solution architecture and conduct usability testing.We offer native mobile development for <strong>iOS,Android and cross-platform/hybrid development of mobile apps</strong></p>
         </div>
     </section>
     <!-- footer -->
